--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     
     <link href="https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&family=Albert+Sans:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <title>React App</title>
+    <title>E-Commerce Site</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
